RESOLVED FIXED82269
Layout Test media/track/track-delete-during-setup.html is hitting an ASSERT_NOT_REACHED
https://bugs.webkit.org/show_bug.cgi?id=82269
Summary Layout Test media/track/track-delete-during-setup.html is hitting an ASSERT_N...
Adam Klein
Reported 2012-03-26 17:31:58 PDT
See http://test-results.appspot.com/dashboards/flakiness_dashboard.html#showExpectations=true&tests=media%2Ftrack%2Ftrack-delete-during-setup.html Here's the stack trace: crash log for DumpRenderTree (pid 29893): SHOULD NEVER BE REACHED third_party/WebKit/Source/WebCore/html/track/LoadableTextTrack.cpp(147) : size_t WebCore::LoadableTextTrack::trackElementIndex() 1 0x10545cd 2 0x10599bc 3 0xf8f206 4 0xfbf7ea 5 0x6b4f4d 6 0x6b33d6 7 0x73d9d0 8 0x13289cd 9 0xb2a0bd 10 0xb24b4c 11 0xb24b1d 12 0x5679ff0618e [29893:29893:18319476732706:ERROR:process_util_posix.cc(142)] Received signal 11 base::debug::StackTrace::StackTrace() [0x8567de] base::(anonymous namespace)::StackDumpSignalHandler() [0x8103c1] 0x7f47be732af0 WebCore::LoadableTextTrack::trackElementIndex() [0x10545d7] WebCore::TextTrackList::append() [0x10545d70599bc] WebCore::HTMLMediaElement::didAddTrack() [0xf8f206] WebCore::HTMLTrackElement::insertedIntoTree() [0xfbf7ea] WebCore::notifyChildInserted() [0x6b4f4d] WebCore::ContainerNode::appendChild() [0x6b33d6] WebCore::Node::appendChild() [0x73d9d0] WebCore::V8Node::appendChildCallback() [0x13289cd] v8::internal::HandleApiCallHelper<>() [0xb2a0bd] v8::internal::Builtin_Impl_HandleApiCall() [0xb24b4c] v8::internal::Builtin_HandleApiCall() [0xb24b1d] 0x5679ff0618e Previously it was hitting an ASSERT(inDocument()), but that was removed in http://trac.webkit.org/changeset/111941. Note that these tests are skipped on, at least, WebKit/Mac. Here's the entry, I wonder if it's out of date: # The mac port has no support for <track> # https://bugs.webkit.org/show_bug.cgi?id=43668 media/track
Attachments
Proposed patch (3.26 KB, patch)
2012-04-04 16:39 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2012-03-27 14:14:47 PDT
*** Bug 82374 has been marked as a duplicate of this bug. ***
Eric Carlson
Comment 2 2012-04-04 16:39:20 PDT
Created attachment 135719 [details] Proposed patch
Philippe Normand
Comment 3 2012-04-11 00:45:41 PDT
I'm going to skip this test on GTK as well until the fix for this crasher lands.
WebKit Review Bot
Comment 4 2012-04-16 08:13:44 PDT
Comment on attachment 135719 [details] Proposed patch Clearing flags on attachment: 135719 Committed r114256: <http://trac.webkit.org/changeset/114256>
WebKit Review Bot
Comment 5 2012-04-16 08:13:49 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2012-04-16 10:01:33 PDT
Note You need to log in before you can comment on or make changes to this bug.