Layout Test media/track/track-delete-during-setup.html is hitting an ASSERT_NOT_REACHED https://bugs.webkit.org/show_bug.cgi?id=82269

Reviewed by Antti Koivisto.

Source/WebCore:

No new tests, already tested by media/track/track-delete-during-setup.html.

* html/HTMLTrackElement.cpp:
(WebCore::HTMLTrackElement::insertedIntoDocument): Don't notify the media element until/unless
the track element is inserted into the document.
* html/HTMLTrackElement.h:

LayoutTests:

* platform/chromium/test_expectations.txt:


Canonical link: https://commits.webkit.org/101531@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114256 268f45cc-cd09-0410-ab3c-d52691b4dbfc